--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <a href="#research">Research Focus</a>
     <a href="#empire">The Foundation of Forever</a>
     <a href="#contact">Contact</a>
-   <a href="https://isayani-78.github.io/resume.pdf" 
+   <a href="https://isayani-78.github.io/Sayani Maity Resume.pdf" 
    class=".resume-btn" 
    download="Sayani Maity Resume.pdf">
    Download Resume
