--- a/index.html
+++ b/index.html
@@ -19,12 +19,11 @@
       <a href="#about">About</a>
       <a href="#skills">Skills</a>
       <a href="#projects">Projects</a>
-      <a href="#certificates">Certificates</a>
+      <a href="#Certificates">Certificates</a>
       <a href="#research">Research</a>
       <a href="#contact">Contact</a>
       <a href="Sayani Maity Resume.pdf" download class="resume-btn">Download Resume</a>
     </nav>
-
     <div class="hamburger" id="hamburger">
       <span></span><span></span><span></span>
     </div>
@@ -86,23 +85,17 @@
     <section id="about" class="page">
       <div class="content">
         <h2>About Me</h2>
-        <p>
-          I am <strong>SAYANI MAITY</strong>, currently pursuing <strong>B.Sc. in Digital Forensics (2023–2026)</strong> at the <strong>Indian School Of Ethical Hacking (ISOEH)</strong> under <strong>MAKAUT, West Bengal</strong>. I specialize in Digital Forensics, Penetration Testing, OSINT, and Cybersecurity Tooling.
-        </p>
-        <p>
-          I am a fully <strong>CEH trained student</strong> and currently completing the <strong>CHFI syllabus</strong>. I actively engage in <strong>CTF challenges, hands-on research, and AI-assisted detection projects</strong> focused on automation and <strong>threat analysis</strong>.
-        </p>
-        <p>
-          My technical skills include <strong>Python, Bash, Shell Scripting, VAPT, WAPT, Nmap, Burp Suite, Autopsy, and OSINT Research</strong>. I am passionate about continuous learning, applying cybersecurity knowledge to real-world problems, and contributing to a safer digital ecosystem.
-        </p>
+        <p>I am <strong>SAYANI MAITY</strong>, currently pursuing <strong>B.Sc. in Digital Forensics (2023–2026)</strong> at the <strong>Indian School Of Ethical Hacking (ISOEH)</strong> under <strong>MAKAUT, West Bengal</strong>. I specialize in Digital Forensics, Penetration Testing, OSINT, and Cybersecurity Tooling.</p>
+
+        <p>I am a fully <strong>CEH trained student</strong> and currently completing the <strong>CHFI syllabus</strong>. I actively engage in <strong>CTF challenges, hands-on security research, and AI-assisted detection projects</strong> focused on automation and <strong>threat analysis</strong>.</p>
+
+        <p>My Technical skills include <strong>Python, Bash, Shell Scripting, VAPT, WAPT, Nmap, Burp Suite, Autopsy, and OSINT Research</strong>. I am passionate about continuous learning, applying cybersecurity knowledge to real-world problems, and contributing to a safer digital ecosystem.</p>
 
         <h3>🎓 Education</h3>
         <ul id="education-list"></ul>
 
         <h3>🎯 Goal</h3>
-        <p>
-          My goal is to strengthen my expertise in Cybersecurity, Digital Investigations, and Ethical Hacking. I aim to develop practical skills that help uncover Digital Evidence, Detect Vulnerabilities, and secure critical systems. Ultimately, I aspire to become a proficient Cybersecurity Professional bridging theory and real-world application.
-        </p>
+        <p>As a dedicated Digital Forensics Student, my goal is to strengthen my expertise in Cybersecurity, Digital Investigations, and Ethical Hacking. I aim to develop practical skills that help uncover Digital Evidence, Detect Vulnerabilities, and secure critical systems. Ultimately, I aspire to become a proficient Cybersecurity Professional bridging theory and real-world application.</p>
       </div>
     </section>
 
@@ -123,7 +116,7 @@
     </section>
 
     <!-- ===== CERTIFICATES ===== -->
-    <section id="certificates" class="page">
+    <section id="Certificates" class="page">
       <div class="content">
         <h2>Certificates of Participation</h2>
         <div id="certificates-grid" class="certificates-grid"></div>
@@ -138,7 +131,7 @@
           My Research Focuses on <strong>Forensic Artifact Analysis, Security Automation, and AI-driven threat detection</strong>. I explore <strong>Phishing detection, Privacy-preserving Forensics, and the development of open-source forensic tools</strong>. I also study <strong>machine learning techniques</strong> to improve digital evidence acquisition, analysis, and efficiency.
         </p>
         <p>
-          My ultimate aim is to contribute meaningfully to the Cybersecurity and Digital Forensics field, enhancing investigative efficiency and fostering safer digital environments through research and innovation.
+          My ultimate aim is to Contribute Meaningfully to the Cybersecurity and Digital Forensics field, enhancing investigative efficiency and fostering safer digital environments through research and innovation.
         </p>
       </div>
     </section>
@@ -174,8 +167,6 @@
 
   <script>
     document.getElementById("year").textContent = new Date().getFullYear();
-
-    // Sidebar visibility fix
     window.addEventListener("scroll", () => {
       const homeSection = document.getElementById("home");
       const rightPanel = document.getElementById("right-panel");
