--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <section id="about" class="page">
       <div class="content">
         <h2>About Me</h2>
-        <p>I am <strong>SAYANI MAITY</strong>, currently pursuing <strong>B.Sc. in Digital Forensics (2023-2026)</strong> at the <strong>Indian School Of Ethical Hacking (ISOEH)</strong> under <strong>MAKAUT, West Bengal</strong>. I specialize in Digital Forensics, Penetration Testing, OSINT, and cybersecurity tooling.</p>
+        <p>I am <strong>SAYANI MAITY</strong>, currently pursuing <strong>B.Sc. in Digital Forensics (2023-2026)</strong> at the <strong>Indian School Of Ethical Hacking (ISOEH),Kolkata</strong> under <strong>Maulana Abul Kalam Azad University of Technology (MAKAUT), West Bengal, India</strong>. I specialize in Digital Forensics, Penetration Testing, OSINT, and cybersecurity tooling.</p>
 
         <p>I am a fully <strong>CEH trained student</strong> and now completing the <strong>CHFI syllabus</strong>. I actively engage in <strong>CTF challenges, hands-on security research, and AI-assisted detection</strong> projects focused on automation and <strong>threat analysis</strong>.</p>
 
@@ -90,7 +90,7 @@
         <h3>🎓 Education</h3>
         <ul>
           <li>📘 <strong>ICSE, ISC (Pure Science):</strong> St. Thomas' High School, Howrah, West Bengal</li>
-          <li>💻 <strong>B.Sc. Digital Forensics:</strong> Indian School of Ethical Hacking (ISOEH) under MAKAUT, 2023–2026</li>
+          <li>💻 <strong>B.Sc. Digital Forensics:</strong> Indian School of Ethical Hacking (ISOEH) <strong>under</strong> Maulana Abul Kalam Azad University of Technology (MAKAUT), West Bengal, India (2023–2026)</li>
         </ul>
 
         <h3>🎯 Goal</h3>
