--- a/index.html
+++ b/index.html
@@ -337,5 +337,8 @@
   </script>
 
   <script src="script.js"></script>
+
+  <a href="Sayani Maity Resume.pdf" class="floating-resume" download>⬇ Download Resume</a>
+
 </body>
 </html>
