--- a/index.html
+++ b/index.html
@@ -300,6 +300,21 @@
   <a href="https://discord.com/invite/isayani_78" target="_blank" style="color:#2c3e50; text-decoration:none; border:1px solid #1e90ff; padding:6px 12px; border-radius:8px; transition: all 0.3s;">Discord</a>
   <a href="https://www.facebook.com/isayani78" target="_blank" style="color:#2c3e50; text-decoration:none; border:1px solid #1e90ff; padding:6px 12px; border-radius:8px; transition: all 0.3s;">Facebook</a>
 </div>
+        <!-- Resume Button Section -->
+<section id="resume-button" style="text-align:center; margin: 40px 0;">
+  <a href="Your_Resume.pdf" download>
+    <button style="
+      padding: 12px 25px; 
+      font-size: 16px; 
+      background-color: #28ffc6; 
+      border: none; 
+      border-radius: 8px; 
+      cursor: pointer;
+    ">
+      Download Resume
+    </button>
+  </a>
+</section>
 
 
         <!-- Contact form (Formspree) - preserved -->
@@ -337,8 +352,6 @@
   </script>
 
   <script src="script.js"></script>
-
-  <a href="Sayani Maity Resume.pdf" class="floating-resume" download>⬇ Download Resume</a>
 
 </body>
 </html>
