--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
 </div>
         <!-- Resume Button Section -->
 <section id="resume-button" style="text-align:center; margin: 40px 0;">
-  <a href="Your_Resume.pdf" download>
+  <a href="Sayani Maity Resume.pdf" download>
     <button style="
       padding: 12px 25px; 
       font-size: 16px; 
