--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <h3>🎓 Education</h3>
         <ul>
           <li>📘 <strong>ICSE, ISC (Pure Science):</strong> St. Thomas' High School, Howrah, West Bengal</li>
-          <li>💻 <strong>B.Sc. Digital Forensics:</strong> Indian School of Ethical Hacking (ISOEH) <strong>under</strong> Maulana Abul Kalam Azad University of Technology (MAKAUT), West Bengal, India (2023–2026)</li>
+          <li>💻 <strong>B.Sc. Digital Forensics:</strong> Indian School of Ethical Hacking (ISOEH),Kolkata <strong>under</strong> Maulana Abul Kalam Azad University of Technology (MAKAUT), West Bengal, India (2023–2026)</li>
         </ul>
 
         <h3>🎯 Goal</h3>
