--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
   </main>
 
   <footer class="site-footer" style="background:#2c3e50; color:white; text-align:center; padding:20px 0;">
-    <p>© <span id="year"></span> Sayani Maity — Built with care.</p>
+    <p>© <span id="year"></span> Sayani Maity — Built with Dedication.</p>
   </footer>
 
   <script>
