--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
 </div>
         
         <!-- Contact form (Formspree) - preserved -->
-        <form id="contact-form" action="https://formspree.io/f/mpwjkzzz" method="POST" style="margin-top:20px; text-align:left;">
+        <form id="contact-form" action="https://formspree.io/f/xblznbbe" method="POST" style="margin-top:20px; text-align:left;">
           <div style="display:flex; gap:12px; flex-direction:column;">
             <label for="name" style="color:#2c3e50; font-weight:600;">Name</label>
             <input id="name" name="name" required placeholder="Your Name" style="padding:10px; border-radius:8px; border:1px solid #bdc3c7;"/>
