--- a/index.html
+++ b/index.html
@@ -263,6 +263,7 @@
           <div class="certificate-card"><img src="assets/Participation in CTF of Cyraksha (The Cyber Club of Kolkata) [Hackathon 1].jfif" alt="Cyraksha 1"><h3>Participation in Cyraksha CTF (Hackathon 1)</h3></div>
           <div class="certificate-card"><img src="assets/Participation in CTF of Cyraksha (The Cyber Club of Kolkata) [Hackathon 2].jpg" alt="Cyraksha 2"><h3>Participation in Cyraksha CTF (Hackathon 2)</h3></div>
           <div class="certificate-card"><img src="assets/Participation In CTF workshop By Cyraksha (The Cyber Club Of Kolkata).jpg" alt="Cyraksha Workshop"><h3>Participation in Cyraksha CTF Workshop</h3></div>
+          <div class="certificate-card"><img src="assets/Deloitte job simulation.jpg" alt="Cryptoquest"><h3>Deloitte job simulation hosted by Forage</h3></div>
         </div>
       </div>
     </section>
