--- a/index.html
+++ b/index.html
@@ -87,6 +87,8 @@
 
         <p>My Technical skills include <strong>Python, Bash, Shell Scripting, VAPT, WAPT, Nmap, Burp Suite, Autopsy and OSINT research</strong>. I am Passionate about continuous learning, applying cybersecurity knowledge to real-world problems, and contributing to a safer digital ecosystem.</p>
 
+        <p> Top 8% in Tryhackme https://tryhackme.com/p/Sayani </p>
+
         <h3>🎓 Education</h3>
         <ul>
           <li>📘 <strong>ICSE, ISC (Pure Science):</strong> St. Thomas' High School, Howrah, West Bengal</li>
