--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
 
         <p>My Technical skills include <strong>Python, Bash, Shell Scripting, VAPT, WAPT, Nmap, Burp Suite, Autopsy and OSINT research</strong>. I am Passionate about continuous learning, applying cybersecurity knowledge to real-world problems, and contributing to a safer digital ecosystem.</p>
 
-        <p> Top 8% in Tryhackme https://tryhackme.com/p/Sayani </p>
+        <p>Top 8% in try hack me... <img src="Sayani thm badge id.jpg" alt="Sayani thm badge" width="80" style="vertical-align:middle; border-radius:6px;"></p>
+
 
         <h3>🎓 Education</h3>
         <ul>
