--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
           <div class="certificate-card"><img src="assets/Participation In CTF workshop By Cyraksha (The Cyber Club Of Kolkata).jpg" alt="Cyraksha Workshop"><h3>Participation in Cyraksha CTF Workshop</h3></div>
           <div class="certificate-card"><img src="assets/Deloitte job simulation.jpg" alt="Cryptoquest"><h3>Deloitte job simulation hosted by Forage</h3></div>
           <div class="certificate-card"><img src="assets/Mastercard & New York Jobs CEO Council – Cybersecurity Job Simulation (Forage).jpg" alt="Cryptoquest"><h3>Mastercard & New York Jobs CEO Council – Cybersecurity Job Simulation (Forage)</h3></div>
-          <div class="certificate-card"><img src="assets/Sayani_Maity_GroundZero_WB_Hackathon_ISOEH_Certificate.jpg" alt="Cryptoquest"><h3>Certificate of Achievement for organizing the Ground Zero West Bengal Hackathon as a member of CyRaksha, issued by ISOEH.</h3></div>
+          <div class="certificate-card"><img src="assets/Sayani MaityGroundZeroWB Hackathon ISOEH Certificate.jpg" alt="Cryptoquest"><h3>Certificate of Achievement for organizing the Ground Zero West Bengal Hackathon as a member of CyRaksha, issued by ISOEH.</h3></div>
         </div>
       </div>
     </section>
